--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -88,8 +88,8 @@
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExample">
               <a href="javascript:void(0)" [routerLink]="['/inventory/supplier']" id="collapseExample">Supplier</a>
-              <a href="javascript:void(0)" [routerLink]="['/inventory/purchaseList']" id="collapseExample">Purchase
-                List</a>
+              <a href="javascript:void(0)" [routerLink]="['/inventory/purchaseList']" id="collapseExample">PurchaseList</a>
+              <a href="javascript:void(0)" [routerLink]="['/inventory/product-transfer']" id="collapseExample">Prod-Transfer</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/fitterList']" id="collapseExample">Fitter</a>
             </div>
           </div>
