--- a/web/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/web/src/app/inventory/product-transfer/product-transfer.component.html
@@ -1,1 +1,17 @@
-<p>product-transfer works!</p>
+<section class="content">
+    <div class="container-fluid">
+        <div class="block-header"> </div>
+        <div class="row clearfix">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
+                <div class="card">
+                    <div class="header">
+                        <h2>Product Transfer </h2>
+                    </div>
+                    <div class="body">
+                    
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
