--- a/web/src/app/inventory/purchase-list/purchase-list.component.css
+++ b/web/src/app/inventory/purchase-list/purchase-list.component.css
@@ -2,6 +2,10 @@
     pointer-events: none;
   }
 
+  i {
+    pointer-events: none;
+  }
+
 .bg-none{
     background-color: rgba(0, 0, 0, 0);
     border: none;
@@ -13,4 +17,17 @@
     border: none;
     padding: 0;
     margin: 0;
+}
+
+.detail_icons i{
+  background: #38a042e8;
+  color: #fff;
+  padding: 4px !important;
+  border-radius: 24px !important;
+  font-size: 22px !important;
+  height: 30px !important;
+  width: 30px !important;
+  transition: .5s;
+  cursor: pointer;
+  box-shadow: 2px 2px 6px #9c9795fa;
 }
