--- a/web/src/app/inventory/purchase/purchase.component.css
+++ b/web/src/app/inventory/purchase/purchase.component.css
@@ -6,8 +6,34 @@
     color:green !important;
 }
 
-.delete_icon {
+.delete_icons {
     background: #ff0000;
+    color: #fff;
+    padding: 3px;
+    border-radius: 24px;
+    font-size: 18px;
+    height: 24px !important;
+    width: 24px !important;
+    cursor: pointer;
+    transition: 0.5s;
+    box-shadow: 2px 2px 6px #9c9795fa;
+}
+
+.print_icon {
+    background: #1c1a9c;
+    color: #fff;
+    padding: 3px;
+    border-radius: 24px;
+    font-size: 18px;
+    height: 24px !important;
+    width: 24px !important;
+    cursor: pointer;
+    transition: 0.5s;
+    box-shadow: 2px 2px 6px #9c9795fa;
+}
+
+.edit_icons {
+    background: #14a44d;
     color: #fff;
     padding: 3px;
     border-radius: 24px;
@@ -32,4 +58,13 @@
     border: none;
     margin: 0;
     padding: 0;
+}
+
+
+.mat-input-element:disabled {
+    color: rgb(0 0 0) !important;
+}
+
+.mat-select-disabled .mat-select-value {
+    color: rgb(0, 0, 0);
 }
