--- a/web/src/app/inventory/purchase/purchase.component.html
+++ b/web/src/app/inventory/purchase/purchase.component.html
@@ -206,8 +206,8 @@
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Purchase Price</mat-label>
-                                        <input matInput name="UnitPrice" [(ngModel)]="item.UnitPrice" required
-                                            #UnitPricecontrol [autocomplete]="false" (change)="calculateFields('UnitPrice', 'subTotal')">
+                                        <input matInput name="UnitPrice"  [(ngModel)]="item.UnitPrice" required
+                                            #UnitPricecontrol [autocomplete]="false" (blur)="calculateFields('UnitPrice', 'subTotal')">
                                         <mat-error>
                                             Unit Price is required
                                         </mat-error>
@@ -217,7 +217,7 @@
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Quantity</mat-label>
                                         <input matInput name="Quantity" [(ngModel)]="item.Quantity" required
-                                            #Quantitycontrol [autocomplete]="false" (change)="calculateFields('Quantity', 'subTotal')">
+                                            #Quantitycontrol [autocomplete]="false" (blur)="calculateFields('Quantity', 'subTotal')">
                                         <mat-error>
                                             Quantity is required
                                         </mat-error>
@@ -307,7 +307,7 @@
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
                                     <button *ngIf="editBtn === false" class="mr-3" type="submit" [disabled]="!f.valid || item.Quantity == 0"
-                                        mat-raised-button color="primary">Add</button>
+                                        mat-raised-button color="primary" >Add</button>
                                     <button *ngIf="editBtn === true" class="mr-3" type="submit" [disabled]="!f.valid || item.Quantity == 0"
                                         mat-raised-button color="primary" (click)="editUpdate()">Update</button>
                                 </div>
@@ -390,9 +390,8 @@
                         <!-- save purchase end -->
                         <form #f2="ngForm"  (ngSubmit)="onSumbit()">
                             <!-- Add item List start -->
-                            <div class="row">
-                                <div class="col-sm-12" style="overflow: auto; height: 340px;">
-                                    <div class="table-responsive">
+                            <div class="row" >
+                                <div class="col-sm-12 p-0" style="overflow-y: auto; height: 340px;box-shadow: 1px 0px 2px 4px #ddddddff;">
                                         <table class="table table-striped table-hover table-sm table-bordered"
                                             style="border: 2px solid #fff !important;">
                                             <thead>
@@ -406,12 +405,12 @@
                                                     <th>Product</th>
                                                     <th>PurchasePrice</th>
                                                     <th>Quantity</th>
-                                                    <th>SubTotal</th>
-                                                    <th>TAXAmt</th>
-                                                    <th>TAX%</th>
-                                                    <th>TAXType</th>
-                                                    <th>DisAmt</th>
                                                     <th>Dis%</th>
+                                                    <th>DisAmt</th>
+                                                    <th>SubTotal</th>
+                                                    <th>TAX%</th>
+                                                    <th>TAXAmt</th>
+                                                    <th>TAXType</th>
                                                     <th>TotalAmt</th>
                                                     <th>SalePrice/Unit</th>
                                                     <th>WholeSalePrice/Unit</th>
@@ -426,27 +425,27 @@
                                                     </td>
                                                     <!-- <td style="z-index: -999 !important;" *ngIf="data.Status === 0"></td> -->
                                                     <td class="text-center">
-                                                        <mat-icon *ngIf="data.Status !== 0" class="delete_icon ms-1">print</mat-icon>
-                                                        <mat-icon *ngIf="data.Status !== 0" class="delete_icon ms-1" (click)="deleteItem('Product',i)">delete_forever</mat-icon>
-                                                        <mat-icon class="delete_icon ms-1" (click)="edititem('Product',data)" *ngIf="data.ID === null">edit </mat-icon>
+                                                        <mat-icon *ngIf="data.Status != 0 && data.ID !== null" class="print_icon ">print</mat-icon>
+                                                        <mat-icon *ngIf="data.Status !== 0" class="delete_icons ms-1" (click)="deleteItem('Product',i)">delete_forever</mat-icon>
+                                                        <mat-icon class="edit_icons ms-1" (click)="edititem('Product',data)" *ngIf="data.ID === null">edit </mat-icon>
                                                     </td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.BaseBarCode}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.UniqueBarcode}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.ProductName}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.UnitPrice }}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.Quantity}}</td>
-                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.SubTotal}}</td>
-                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.GSTAmount}}</td>
-                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.GSTPercentage}}%</td>
-                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.GSTType}}</td>
-                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.DiscountAmount}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.DiscountPercentage}}%</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.DiscountAmount}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.SubTotal}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.GSTPercentage}}%</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.GSTAmount}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.GSTType}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.TotalAmount}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.RetailPrice}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.WholeSalePrice}}</td>
                                                     <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" ><span *ngIf="data.BrandType === true">Brand</span> <span *ngIf="data.BrandType === true">Non-Brand</span></td>
                                                 </tr>
-                                               
+                                                <!-- chargeList -->
                                                 <tr *ngFor="let data of chargeList ; let i = index;">
                                                     <td></td>
                                                     <td class="text-center">
@@ -457,25 +456,25 @@
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.ChargeType}}/{{data.Description}}</td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
+                                                    <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
+                                                    <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
                                                     <td *ngIf="data.ID !== null" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.Amount }} </td>
                                                     <td *ngIf="data.ID === null" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.Price}} </td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.GSTAmount}}</td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.GSTPercentage}}%</td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.GSTType}}</td>
-                                                    <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
-                                                    <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.TotalAmount}}</td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
                                                     <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">--</td>
                                                 </tr>
+                                                <!-- chargeList -->
                                             </tbody>
                                         </table>
-                                    </div>
                                 </div>
                             </div>
                             <!-- Add item List end -->
                             <!-- Total calculcation start -->
-                            <div class="row">
+                            <div class="row pt-3 ">
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Quantity</mat-label>
@@ -528,8 +527,8 @@
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>Total Amount</mat-label>
-                                        <input matInput name="TotalAmountt"
+                                        <mat-label style="color: rgb(255 0 0);">Total Amount</mat-label>
+                                        <input style="color: rgb(255 0 0) !important;" matInput name="TotalAmountt"
                                             [(ngModel)]="selectedPurchaseMaster.TotalAmount" disabled
                                             #TotalAmounttcontrol [autocomplete]="false">
                                         <mat-error>
@@ -541,12 +540,12 @@
                                     <button type="button" class="mr-3" mat-raised-button
                                         color="primary">PrintBarcode</button>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
-                                    <button type="submit" *ngIf="id == 0"  [disabled]="itemList.length == 0 || id != 0" mat-raised-button color="primary">Save
+                                <div *ngIf="id == 0" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
+                                    <button type="submit"   [disabled]="itemList.length == 0 || id != 0" mat-raised-button color="primary">Save
                                         </button>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 mr-3">
-                                    <button type="button" [disabled]="itemList.length === 0" (click)="updatedPurchase()" *ngIf="selectedPurchaseMaster.ID !== null" mat-raised-button
+                                <div *ngIf="selectedPurchaseMaster.ID !== null" class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 mr-3">
+                                    <button type="button" [disabled]="itemList.length === 0" (click)="updatedPurchase()"  mat-raised-button
                                         color="primary">Update</button>
                                 </div>
                             </div>
